--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Document</title>
   </head>
-
   <body>
-    <div class="top-container"></div>
+    <div class="top-container">
+      <div class="main-title">
+        <h1>Dr. Norman Borlaug</h1>
+      </div>
+      <div class="main-description">
+        <p>The man who saved a billion lives</p>
+      </div>
+      <div class="banner">
+        <div>
+          <img src="images/10613180113_fdf7bcd316_b.jpg" alt="Tribute" />
+        </div>
+        <div class="banner-text">
+          <p>
+            Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+            on how to increase wheat yields - part of his life-long war on
+            hunger.
+          </p>
+        </div>
+      </div>
+      <div class="timeline">
+        <div class="timeline-title">
+          <h3>Here's a time line of Dr. Borlaug's life:</h3>
+        </div>
+        <div class="timeline-list">
+          <ul>
+            <li><strong>1914</strong> - Born in Cresco, Iowa</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
