--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>The man who saved a billion lives</p>
       </div>
       <div class="banner">
-        <div>
+        <div class="image">
           <img src="images/10613180113_fdf7bcd316_b.jpg" alt="Tribute" />
         </div>
         <div class="banner-text">
@@ -33,6 +33,12 @@
         <div class="timeline-list">
           <ul>
             <li><strong>1914</strong> - Born in Cresco, Iowa</li>
+            <br />
+            <li>
+              <strong>1933</strong> - Leaves his family's <br />
+              farm to attend the University of Minnesota, thanks to a Depression
+              era program known as the "National Youth Administration"
+            </li>
           </ul>
         </div>
       </div>
